# CODE-interpreter

./: CMakeLists.txt  Dockerfile  README.md
Parser/: token.c
include/internal/: code_core_token.h  codecore_parser.h  codecore_token.h
include/utils/: assertne.h  color.h  io.h  rfile.h
parser/: token.c  tokenizer.c  tokenizer.h
src/: main.c
src/code/: visitor.c  visitor.h
src/parser/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h  symtab.c  symtab.h  token.c  tokenizer.h  types.c  types.h
test/: main.code  test.c  test.code  test1.code  test10.code  test11.code  test13.code  test14.code  test18.code  test19.code  test2.code  test20.code  test21.code  test22.code  test23.code  test24.code  test25.code  test26.code  test27.code  test28.code  test29.code  test3.code  test30.code  test31.code  test32.code  test33.code  test34.code  test35.code  test36.code  test37.code  test38.code  test4.code  test40.code  test41.code  test42.code  test5.code  test6.code  test7.code  test8.code  test9.code
